--- a/new_cornellian.html
+++ b/new_cornellian.html
@@ -28,7 +28,7 @@
       <div class="row center">
         <input type = "text" value = "{{ class_id }}" id = "class_id">
         <input type = "text" placeholder = "Your First Name" id = "first_name">
-        <input type = "text" placeholder = "Your Last Name" id = "first_name">
+        <input type = "text" placeholder = "Your Last Name" id = "last_name">
         <select id = "classof">
           <option value="" disabled selected>You are in the class of...</option>
           <option value="2018">2018</option>
