--- a/new_cornellian.html
+++ b/new_cornellian.html
@@ -20,7 +20,7 @@
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
   </nav>
-  <div class="section no-pad-bot" id="index-banner" style = "height:90vh;">
+  <div class="section no-pad-bot" id="index-banner" style = "height:0vh;">
     <div class="container">
       <br><br>
       <h1 class="header center">Add yourself!</h1>
@@ -47,7 +47,7 @@
     </div>
   </div>
 
-  <footer class="page-footer red darken-1">
+  <footer class="page-footer red darken-1 hide-on-med-and-down">
     <div class="footer-copyright">
       <div class="container">
       Created by <a class="white-text lighten-2" href="mailto:ta335@cornell.edu">Tanishq Aggarwal</a>, '21.
