--- a/view_cornellian.html
+++ b/view_cornellian.html
@@ -55,7 +55,7 @@
     </div>
   </div>
 
-  <footer class="page-footer red darken-1">
+  <footer class="page-footer red darken-1 hide-on-med-and-down">
     <div class="footer-copyright">
       <div class="container">
       Created by <a class="white-text lighten-2" href="mailto:ta335@cornell.edu">Tanishq Aggarwal</a>, '21.
