--- a/delete_class.html
+++ b/delete_class.html
@@ -24,7 +24,7 @@
     <div class="container">
       <br><br>
       <h1 class="header center">Are you sure?</h1>
-      <h6 class='center'>You are removing yourself, <b>{{ cornellian_info.first_name }} {{ cornellian_info.last_name }} (Class of {{ cornellian_info.classof }})</b> from <b>{{ course_info.course_number }}: {{ course_info.class_title }}</b>.</h6>
+      <h6 class='center'>You are removing yourself, <b>{{ cornellian_info.first_name }} {{ cornellian_info.last_name }} (Class of {{ cornellian_info.classof }})</b> from <b>{{ course_info.course_number }}: {{ course_info.class_title }} (the {{ course_info.class_type }} section)</b>.</h6>
       <h6 class='center'>Enter your passcode to proceed. If you forget your passcode, contact Tanishq.</h6>
       <div class="row center">
         <input type = "password" placeholder = "Passcode" id = "passcode">
