Cleaned up scraper

--- a/new_cornellian.html
+++ b/new_cornellian.html
@@ -36,7 +36,7 @@
           <option value="2020">2020</option>
           <option value="2021">2021</option>
         </select>
-        <input type = "email" placeholder = "Your Cornell Email Address" id = "email_address">
+        <input type = "email" placeholder = "Your Cornell Email Address" id = "email_address" pattern = "^[a-zA-Z0-9_.+-]+@(?:(?:[a-zA-Z0-9-]+\.)?[a-zA-Z]+\.)?(cornell)\.edu$" class = "validate">
         <input type = "password" placeholder = "Add a passcode, so you can delete yourself from the class if necessary" id = "passcode">
       </div>
       <div class="row center">
