--- a/new_class.html
+++ b/new_class.html
@@ -26,7 +26,7 @@
       <h1 class="header center">Looks like that class doesn't exist, yet...</h1>
       <div class="row center">
         <h5 class="header col s12 light">Add it to this system!</h5>
-        <input type = "text" value = "{{ class_id }}" id = "class_id">
+        <input type = "text" value = "{{ class_id }}" id = "class_id" disabled>
         <input type = "text" placeholder = "Course Number (i.e. ECE2300)" id = "course_number">
         <input type = "text" placeholder = "Course Title (i.e. 'Digital Logic')" id = "class_title">
         <input type = "text" placeholder = "Course Timing (i.e. Mondays, Wednesdays, 7:30 PM - 10:30 PM)" id = "class_times">
