--- a/new_cornellian.html
+++ b/new_cornellian.html
@@ -20,7 +20,7 @@
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
   </nav>
-  <div class="section no-pad-bot" id="index-banner" style = "height:0vh;">
+  <div class="section no-pad-bot" id="index-banner" style = "height:100vh;">
     <div class="container">
       <br><br>
       <h1 class="header center">Add yourself!</h1>
@@ -50,11 +50,11 @@
   <footer class="page-footer red darken-1 hide-on-med-and-down">
     <div class="footer-copyright">
       <div class="container">
-      Created by <a class="white-text lighten-2" href="mailto:ta335@cornell.edu">Tanishq Aggarwal</a>, '21.
+      Created by <a class="white-text lighten-2" href="mailto:ta335@cornell.edu">Tanishq Aggarwal</a> '21.
       </div>
     </div>
   </footer>
-</body>
+
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
